# adaptive-chunking-rag

./: .gitignore  README.md  debug_converter.py  find_best_contexts.py  pyproject.toml  requirements.txt  split.py
.claude/: settings.json
configs/: default.yaml
data/: natural_questions_squad_100.json  train_100.json  train_1000.json  validation_100.json  validation_1000.json
results/: visualize_results.py
results/train_100/: eval_metrics.json
src/chunkers/: __init__.py  _spacy_cache.py  base_chunker.py  fixed_chunker.py  paragraph_chunker.py  recursive_chunker.py  semantic_density_chunker.py  sentence_chunker.py  structure_aware_chunker.py
src/embeddings/: __init__.py  embedding_model.py  faiss_index.py  search.py
src/evaluation/: encode_worker.py  eval_metrics.py
src/utils/: config.py  data_loader.py  hyperparameter_search.py  natural_questions_to_squad.py  nq_to_squad_converter.py  squad_v2_loader.py  text_preprocessor.py
tests/: test_chunkers.py  test_retrieval.py
